turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:12: error: not found: value BrushUp
    BrushUp
    ^HouseTree:18: error: not found: value BrushDown
    BrushDown
    ^